resolvendo o problema na nav-bar com Z-index

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,8 @@ header {
     position: sticky;
     top: 0px;
     background: #16170f;
+    z-index: 10;/*EIXO Z - PROFUNDIDADE*/
+    /* ERA ISSO! HÁ!!!!! */
 }
 
 nav.nav-bar ul{
@@ -172,7 +174,7 @@ section.banner {
 .format {
     height: 30vh;
     width: 100%;
-    background-color: rgb(207, 207, 207);
+    background-color: rgb(241, 240, 240);
     margin-bottom: 30px;
 }
 
@@ -213,24 +215,30 @@ section.banner {
 .products-img img, .products-img-inv img{
     width: 200px;
     border-radius: 5px;
+    opacity: 0.8;
 }
 
 .menu-tittle {
     display: inline-block;
     font-size: 1.1rem;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
     width: 80%;
 }
 
 .text-menu {
     margin-bottom: 15px;
     font-size: 0.9rem;
+    width: 80%;
+}
+
+.menu:first-child, .menu-inv:first-child {
+    margin-top: 15px;
 }
 
 .preco {
     color: white;
     background-color: #16170f;
-    padding: 8px;
+    padding: 5px;
 }
 
 
